--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "normalize.css": "8.0.1",
     "null-loader": "4.0.1",
     "scar": "2.3.0"
+  },
+  "dependencies": {
+    "babel-loader": "^8.2.5"
   }
 }
